# shimoto

./: .gitignore  README.md
server/: Cargo.toml
server/src/: main.rs
server/src/dao/: comic_dao.rs  mod.rs  page_dao.rs
server/src/endpoints/: comic.rs  mod.rs  page.rs  tag.rs
www/: README.md  package-lock.json  package.json  quasar.config.js
